Fixed navbar having too much padding in mobile view

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,4 +15,11 @@ form.login input {
 .navbar-search .btn {margin:-9px 0 0 0;}
 }
 
+/* Fix padding issue on mobile version */
+@media (min-width: 979px) {
+    body {
+        padding-top: 60px;
+    }
+}
+
 /* Make login button fit -- END --*/
